Made PD cell text wrap to prevent overflowing

--- a/app/assets/stylesheets/patient_dashboard.less
+++ b/app/assets/stylesheets/patient_dashboard.less
@@ -2,6 +2,13 @@ html, body, .container-fluid, [role="main"], .measure-layout, .patient-dashboard
   // height: 100%;
 }
 
+.limited {
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .tableScrollContainerList {
   overflow-y: scroll;
   max-height: 300px !important;
